Fix expanded search covering suggestions.

--- a/client/my-sites/themes/themes-magic-search-card/style.scss
+++ b/client/my-sites/themes/themes-magic-search-card/style.scss
@@ -17,6 +17,10 @@
 		}
 	}
 
+	.search.is-expanded-to-container {
+		height: 58px;
+	}
+
 	.section-nav {
 		margin: 0;
 	}
